<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rado.piero.cachuelitos.RegistroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_fondo_cachuelo"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_negrotransp"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/bg_logocachuelito" />
        <EditText
            android:id="@+id/ed_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_nombre"
            android:inputType="text"
            android:textColor="@color/color_blanco"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/color_plomo"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
        <EditText
            android:id="@+id/ed_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_apellido"
            android:inputType="text"
            android:textColor="@color/color_blanco"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/color_plomo"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
        <EditText
            android:id="@+id/ed_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_blanco"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/color_plomo"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
        <EditText
            android:id="@+id/ed_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_contraseña"
            android:inputType="textPassword"
            android:textColor="@color/color_blanco"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/color_plomo"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
        <Button
            android:id="@+id/ed_registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_inicio_color"
            android:text="@string/main_registrate"
            android:textSize="16sp"
            android:textColor="@color/color_blanco"
            android:elevation="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_CuentaCreada"
                android:textSize="16sp"
                android:textColor="@color/color_blanco"

                />
            <Button
                android:onClick="callRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_IniciarSesion"
                android:background="@android:color/transparent"
                android:layout_marginLeft="40dp"
                android:textColor="@color/color_unico"
                />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
